# ada-pulse-2026

./: .gitignore  CURRENT_STATE.md  README.md  main.py  pyproject.toml
app/infra/data-ingest-uploader/: upload_ingest_to_gcs.py
app/kpi-analytics/kpi-compute/: main.py  requirements.txt
app/kpi-analytics/kpi-serving/: Dockerfile  README.md  bq_repository.py  config.py  main.py  requirements.txt  router_kpis.py  schemas.py
app/operational-intelligence/orchestrator-agent/: .env.example  Dockerfile  README.md  app.py  requirements.txt
app/operational-intelligence/orchestrator-agent/pulse_oi/: agent.py  financial_agent.py  sales_crm_agent.py  synthesis_agent.py
app/reporting-delivery/: Dockerfile  email_sender.py  main.py  renderer.py
archive/: main_jelles.py
data/ingest/: financial_clean.csv  financial_clean.csv.bak  sales_marketing_clean.csv
data/kpi/: gold_kpi_snapshots_local.csv
data/mockaroo/: Financial_data.csv  Sales & Marketing.csv
docs/: Assignment2-Outline.md  KPI-Analytics-plan.md  Operational-Intelligence-plan.md  assignment2-Gilbert.md
scripts/: change_outstanding_invoices.py.py  compute_kpis_local.py  create_mock_data.py  plot_kpi_trends.py
